[gd_scene load_steps=14 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://camera/MainCamera.gd" type="Script" id=2]
[ext_resource path="res://background/starry.png" type="Texture" id=3]
[ext_resource path="res://EnemyManager.gd" type="Script" id=4]
[ext_resource path="res://background/ParallaxBackground.gd" type="Script" id=5]
[ext_resource path="res://background/starry2.png" type="Texture" id=6]
[ext_resource path="res://GameManager.gd" type="Script" id=7]
[ext_resource path="res://menus/PauseMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Pause.gd" type="Script" id=9]
[ext_resource path="res://Healthbar.gd" type="Script" id=10]
[ext_resource path="res://menus/GameOverMenu.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.47451, 1, 0.368627, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.196078, 0.196078, 0.196078, 0.313726 )

[node name="Game" type="Node"]
script = ExtResource( 7 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 5 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 1920 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 3 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.1, 1.1 )
motion_mirroring = Vector2( 1920, 1920 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 6 )
centered = false
flip_h = true
flip_v = true

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MainCamera" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 4.0
script = ExtResource( 2 )

[node name="EnemyManager" type="Node2D" parent="."]
script = ExtResource( 4 )
max_enemies = 25

[node name="EnemySpawnTimer" type="Timer" parent="EnemyManager"]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Healthbar" type="ProgressBar" parent="HUD"]
anchor_right = 1.0
margin_bottom = 14.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
tracking = NodePath("../../../Game/Player")

[node name="Pause" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 9 )

[node name="GUI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="PauseMenu" parent="GUI" instance=ExtResource( 8 )]
visible = false

[node name="GameOver" parent="GUI" instance=ExtResource( 11 )]
visible = false
[connection signal="direction_changed" from="Player" to="ParallaxBackground" method="_on_Player_direction_changed"]
[connection signal="tree_exited" from="Player" to="." method="_on_Player_tree_exited"]
[connection signal="player_killed_enemy" from="EnemyManager" to="." method="_on_EnemyManager_player_killed_enemy"]
[connection signal="timeout" from="EnemyManager/EnemySpawnTimer" to="EnemyManager" method="_on_EnemySpawnTimer_timeout"]
[connection signal="volume_slider_value_changed" from="GUI/PauseMenu" to="." method="_on_volume_changed"]
[connection signal="restart_pressed" from="GUI/GameOver" to="." method="_on_GameOver_restart_pressed"]
